--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ p, a {
 	49%{opacity: 0}
 	50% {opacity: 1}
 }
+#hidden {
+  display: none;
+}
 blink{animation: blink 1s infinite;}
 .container{
   max-width: 600px;
