--- a/style.css
+++ b/style.css
@@ -1,35 +1,47 @@
 body {
   background-color: #112;
+  margin: 0px;
 }
+header.header {
+  background-image: linear-gradient(to bottom , #001178 , #6600aa );
+  background-repeat: no-repeat;
+  margin: 0px;
+}
+
 h1 {
   text-decoration: none;
   font-family: 'Consolas';
-  color: rgb(0, 4, 255);
+  color: white;
   text-align: center;
   font-size: 65pt;
 }
 h2, h3 {
   text-decoration: none;
   font-family: 'Consolas';
-  color: rgb(0, 4, 255);
+  color: white;
   text-align: center;
-  font-size: 20pt;
+  font-size: 30pt;
   margin-top: auto - 20;
 }
 p, a {
   text-decoration: none;
   font-family: 'Consolas';
-  color: rgb(0, 4, 255);
+  color: white;
   text-align: center;
-  font-size: 30pt;
+  font-size: 20pt;
   margin-top: auto - 20;
+}
+a {
+  text-decoration: underline;
+  text-decoration-color: greenyellow;
+  color: greenyellow;
 }
 @keyframes blink {
 	0% {opacity: 0}
 	49%{opacity: 0}
 	50% {opacity: 1}
 }
-.hidden {
+#hidden {
   display: none;
 }
 blink{animation: blink 1s infinite;}
@@ -40,10 +52,38 @@ blink{animation: blink 1s infinite;}
   flex-direction: column;
   justify-content: center;
 }
+.topcontainer{
+  max-width: 600px;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
 .wb-body{
   background-color: black;
 }
 .wb-title {
   font-family: "Consolas";
   font-size: 15pt;
+  background-image: linear-gradient(to right , #001178 , #6600aa, #0000bd );
+  background-repeat: no-repeat;
 }
+.wb-icon{
+  background: transparent;
+}
+.topbar {
+  background-color: black; 
+  padding: 7px 20px;
+  margin-bottom: 15px;
+  margin: 0px;
+}
+html, body, div {
+  margin:0;
+  padding:0;
+  border:0;
+  outline:0;
+  font-size:100%;
+  vertical-align:baseline;
+  }
