--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 body {
   background-color: #112;
   margin: 0px;
@@ -10,14 +11,14 @@ header.header {
 
 h1 {
   text-decoration: none;
-  font-family: 'Consolas';
+  font-family: 'Ubuntu', sans-serif;
   color: white;
   text-align: center;
   font-size: 65pt;
 }
 h2, h3 {
   text-decoration: none;
-  font-family: 'Consolas';
+  font-family: 'Ubuntu', sans-serif;
   color: white;
   text-align: center;
   font-size: 30pt;
@@ -25,7 +26,7 @@ h2, h3 {
 }
 p, a {
   text-decoration: none;
-  font-family: 'Consolas';
+  font-family: 'Ubuntu', sans-serif;
   color: white;
   text-align: center;
   font-size: 20pt;
