--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ header.header {
   background-size: cover;
   margin: 0px;
 }
-
+img {
+  border-radius: 7px;
+}
 h1 {
   text-decoration: none;
   font-family: 'Dosis', sans-serif;
